--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -65,13 +66,32 @@ dependencies {
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    // Okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
+    // datastore sharedpref
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+
+    // live data
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
+
+    // dagger hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // workManager
+    implementation("androidx.work:work-runtime-ktx:2.7.1")
+
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
