--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -95,8 +97,14 @@ dependencies {
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // Optional -- Mockk framework
+    // mockk
     implementation "io.mockk:mockk:1.13.1"
     testImplementation "io.mockk:mockk:1.13.1"
 
+    // firebase
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
