--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -78,7 +80,7 @@ dependencies {
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    kapt 'com.github.bumptech.glide:compiler:4.13.2'
 
     // datastore sharedpref
     implementation("androidx.datastore:datastore-preferences:1.0.0")
